2006-09-03  Zack Weinberg  <zackw@panix.com>

	* NEWS: Mention workspace format change.
	* monotone.texi: Update for workspace format change (pluck from
	nvm.workspace-merge.api [this branch is now dead], with further
	tweaks)
	* work_migration.cc: Correct comment.

2006-08-31  Zack Weinberg  <zackw@panix.com>

	* work.hh: Update comment describing contents of _MTN directory.

2006-08-30  Zack Weinberg  <zackw@panix.com>

	* work.cc: No need to include app_state.cc.
	(workspace::update_current_roster_from_filesystem): Put back
	variant that doesn't take a node_restriction.
	(workspace::maybe_update_inodeprints): Remove app_state argument.
	Use 1-argument update_current_roster_from_filesystem.
	* work.hh: Update to match.
	* automate.cc, cmd_merging.cc, cmd_ws_commit.cc: All callers changed.

2006-08-30  Zack Weinberg  <zackw@panix.com>

	* automate.cc (get_option): Rewrite for revised _MTN/options
	handling.

2006-08-27  Zack Weinberg  <zackw@panix.com>

	Cleanup after merge from mainline.

	* cmd_ws_commit.cc (migrate_workspace): OPT_NONE -> option::none.
	* work.cc: Include ui.hh.
	(workspace::update_current_roster_from_filesystem):
	Remove the overload that doesn't take a node_restriction argument.
	Remove the app_state argument from the overload that does.
	Use ui.prog_name.
	* work_migration.cc: Include ui.hh; not app_state.hh.
	(workspace::check_ws_format): Use ui.prog_name.
	(first_version_supporting_current_format): Will now be 0.30.
	* tester.lua (deltree, _deltree): Delete, unused.
	* tests/migrate_workspace/__driver__.lua: Update for changes in
	mtn status output.

	* automate.cc (inventory)
	* cmd_ws_commit.cc (add): Adjust call to find_unknown_and_ignored.
	* automate.cc (get_revision, get_current_revision_id, get_manifest_of)
	* cmd_merging.cc (update, pluck)
	* work.cc (workspace::maybe_update_inodeprints):
	Call update_current_roster_from_filesystem with a dummy
	node_restriction.
	* cmd_diff_log.cc (diff)
	* cmd_list.cc (ls_changed)